[gd_scene load_steps=9 format=3 uid="uid://bwxh2vx4spbgv"]

[ext_resource type="Script" path="res://Scripts/Statue.gd" id="1_8eq6b"]
[ext_resource type="Texture2D" uid="uid://baijrch51vi5d" path="res://Assets/Statue.png" id="1_73apc"]
[ext_resource type="PackedScene" uid="uid://c3jm5gaa8yh8o" path="res://Scenes/HealthComponent.tscn" id="4_u232e"]
[ext_resource type="Script" path="res://Scripts/HitboxComponent.gd" id="4_vrjju"]
[ext_resource type="Texture2D" uid="uid://bil8me1tnp5wf" path="res://Assets/indicator.png" id="5_dll10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ly4k"]
size = Vector2(44, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifqsu"]
size = Vector2(48, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3oek"]
size = Vector2(296, 128)

[node name="Statue" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_8eq6b")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(2, 2)
texture = ExtResource("1_73apc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_6ly4k")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_vrjju")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_ifqsu")

[node name="HealthComponent" parent="." instance=ExtResource("4_u232e")]
MAX_HEALTH = 100

[node name="INDICATOR" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -64.0
offset_right = 20.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(20, 20)
texture = ExtResource("5_dll10")
stretch_mode = 3

[node name="PlayerRadius" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRadius"]
position = Vector2(108, -16)
shape = SubResource("RectangleShape2D_k3oek")

[connection signal="onDamageEvent" from="HealthComponent" to="." method="_on_health_component_on_damage_event"]
[connection signal="onDeathEvent" from="HealthComponent" to="." method="_on_health_component_on_death_event"]
[connection signal="onHealEvent" from="HealthComponent" to="." method="_on_health_component_on_heal_event"]
[connection signal="body_entered" from="PlayerRadius" to="." method="_on_player_radius_body_entered"]
[connection signal="body_exited" from="PlayerRadius" to="." method="_on_player_radius_body_exited"]
